<resources>
    <string name="app_name">cinemaapi</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="signin">Регистрация</string>
    <string name="login">Войти</string>
    <string name="todo">TODO</string>
    <string name="see">Смотреть</string>
    <string name="trand">В тренде</string>
    <string name="foryou">Для вас</string>
    <string name="nerw">Новое</string>
</resources>